--- a/MondKeyboard/MondKeyboard.csproj
+++ b/MondKeyboard/MondKeyboard.csproj
@@ -2,13 +2,13 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>netcoreapp3.1-windows;net6.0-windows</TargetFrameworks>
+    <TargetFrameworks>net8.0-windows</TargetFrameworks>
     <RuntimeIdentifiers>win-x64</RuntimeIdentifiers>
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Mond" Version="0.9.3" />
+    <PackageReference Include="Mond" Version="0.11.2" />
   </ItemGroup>
 
 </Project>
